[package]
name = "betterkit"
license = "Apache-2.0 OR MIT"
version = "0.1.0"
authors = ["Timothée Ravier"]
edition = "2021"

[dependencies]
env_logger = "^0.11"
failure = "^0.1"
log = "^0.4"
structopt = "^0.3"
tempfile = "^3.1"
zbus = "^4.2"
zvariant = "^4.0"
futures = "0.3.0"
async-std = { version = "1", features = ["attributes"] }
